// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  className="sc-jRQBWg cbkKjv"
>
  <img
    alt=""
    className="sc-eCImPb ffDGxs"
    src="#image"
  />
  <h1
    className="sc-gsDKAQ sZKlR k-Title k-Title--senary k-Title--noMargin"
    style={
      Object {
        "--Title-css-color": null,
      }
    }
  >
    Custom title
  </h1>
  
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-jRQBWg cbkKjv"
>
  <img
    alt="Image alt"
    className="sc-eCImPb ffDGxs"
    src="#image"
  />
  <h1
    className="sc-gsDKAQ sZKlR k-Title k-Title--senary k-Title--noMargin"
    style={
      Object {
        "--Title-css-color": null,
      }
    }
  >
    Custom title
  </h1>
  <div
    className="sc-bdvvtL fKQuJZ"
  >
    <p
      className="sc-dkPtRN dIVqOu k-Paragraph k-Paragraph--tertiary k-Paragraph--noMargin"
    >
      Custom text
    </p>
  </div>
</div>
`;
